--- a/tests/index.html
+++ b/tests/index.html
@@ -1,3 +1,25 @@
+<!-- Esto es un comentario 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Mocha</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mocha.css" />
+  </head>
+  <body>
+    <div id="mocha"></div>
+    <script src="mocha.js"></script>
+    <script>mocha.setup('bdd');</script>
+    <script src="tests.js"></script>
+    <script>
+      mocha.run();
+    </script>
+  </body>
+</html>
+
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -22,3 +44,5 @@
     </script>
   </body>
 </html>
+
+
