--- a/tests/index.html
+++ b/tests/index.html
@@ -1,25 +1,3 @@
-<!-- Esto es un comentario 
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Mocha</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mocha.css" />
-  </head>
-  <body>
-    <div id="mocha"></div>
-    <script src="mocha.js"></script>
-    <script>mocha.setup('bdd');</script>
-    <script src="tests.js"></script>
-    <script>
-      mocha.run();
-    </script>
-  </body>
-</html>
-
--->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -35,7 +13,10 @@
 
     <script src="chai.js"></script>
     <script src="mocha.js"></script>
-    <script src="../temperature.js"></script>
+    <script type="text/javascript" src="../scripts/measure.js"></script>
+    <script type="text/javascript" src="../scripts/temperature.js"></script>
+    <script type="text/javascript" src="../scripts/length.js"></script>
+    <script type="text/javascript" src="../scripts/main.js"></script>
     <script>mocha.setup('tdd')</script>
     <script src="tests.js"></script>
 
